// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #e5e6eb;
}

.emotion-0 span {
  padding: 0 16px;
}

.emotion-1 {
  vertical-align: middle;
  border-style: solid;
  border-width: 0 0 1px 0;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Divider renders horizontal 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #e5e6eb;
}

.emotion-0 span {
  padding: 0 16px;
}

.emotion-1 {
  vertical-align: middle;
  border-style: solid;
  border-width: 0 0 1px 0;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Divider renders vertical 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #e5e6eb;
}

.emotion-0 span {
  padding: 0 16px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  border-width: 0 0 0 1px;
  border-image: initial;
  border-style: dashed;
  height: 1em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Divider renders with colorScheme 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 span {
  padding: 0 16px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  border-width: 0 0 0 1px;
  border-image: initial;
  border-style: solid;
  height: 1em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Divider renders with text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #e5e6eb;
}

.emotion-0 span {
  padding: 0 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #e5e6eb;
  font-size: 20px;
}

.emotion-1 span {
  padding: 0 16px;
}

.emotion-2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-basis: 24px;
  -ms-flex-preferred-size: 24px;
  flex-basis: 24px;
  vertical-align: middle;
  border-style: solid;
  border-width: 0 0 1px 0;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #e5e6eb;
  font-size: 14px;
}

.emotion-5 span {
  padding: 0 16px;
}

.emotion-6 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-basis: 24px;
  -ms-flex-preferred-size: 24px;
  flex-basis: 24px;
  vertical-align: middle;
  border-style: solid;
  border-width: 0 0 1px 0;
  width: 100%;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
        direction="vertical"
      >
        <div
          class="emotion-2"
        />
        <span>
          this is a divider
        </span>
        <div
          class="emotion-2"
        />
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-5"
        direction="vertical"
      >
        <div
          class="emotion-6"
        />
        <span>
          this is a divider
        </span>
        <div
          class="emotion-2"
        />
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-5"
        direction="vertical"
      >
        <div
          class="emotion-2"
        />
        <span>
          this is a divider
        </span>
        <div
          class="emotion-6"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
